Changed default sky turbidity in gensky from the original default of
2.75 to the CIE 110-1994 standard value of 2.45.  Thanks to Marilyne
Anderson of MIT for pointing out this discrepancy.

Added -o option to ra_xyze to produce original pixel values.

Fixed bug in tracing of virtual sources, where intervening glazing was
not being accounted for properly.

Added -h option to pcompos and pcomb to eliminate verbose headers.

=====================
Version 3.9

Added -spec option to falsecolor to restore original spectral color scale.
Also added "-s auto" option to automatically set the maximum value.

Added byte-swapping input and output to rcalc.

Additional error-checking for source surfaces.

Re-fixed bug in octree code that caused it to allocate 8 times as
much memory as it actually used(!) -- this was pointed out way back
in 1999 by Erik Reinhard and Erik Jansen, but the fix they gave me
got lost in the slightly borken release process at the time.  This
should make a big difference in memory usage, especially for the
new mesh primitive.  (I measured 30% less memory usage.)

Corrected ray weights for material mixtures.

Reduced the default -n setting for obj2mesh to take better advantage
of the smaller octree structure size.

Fixed bug in shadow cache where it was adding surfaces with antimatter
holes cut in them to the obstructor list.  Thanks to John Mardaljevic
for discovering and reporting the problem.

Adding ability in mkillum to incorporate BSDF data in calculation.
Internal interface (raypcalls) now used in place of rtrace process(es).

Fixed pixel alignment in pcomb for size reduction and enlargement.

Allow rtcontrib user to set -P and -PP options for persistent rendering.
The only caveat is that -n setting > 1 requires -PP rather than -P.

Added -c option to rtcontrib to facilitate cumulative calculations.

Added ability to incorporate LBNL Window 6 bidirectional scattering
distribution function (BSDF) data in mkillum.